--- a/tools-challenge-payment-rs/pom.xml
+++ b/tools-challenge-payment-rs/pom.xml
@@ -45,6 +45,11 @@
             <version>0.0.1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20220320</version>
+        </dependency>
     </dependencies>
 
 
