Atualizado endpoints seguindo padrão RESTFul
Atualizado endpoints seguindo padrão RESTFul,  melhorado o README.MD e adicionada nova variável de ambiente.

--- a/tools-challenge-payment-rs/src/main/resources/application-dev.properties
+++ b/tools-challenge-payment-rs/src/main/resources/application-dev.properties
@@ -16,7 +16,7 @@ spring.datasource.platform=dev
 spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}/${POSTGRES_DB}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
-spring.jpa.properties.hibernate.default_schema=\"tools_challenge\"
+spring.jpa.properties.hibernate.default_schema=${POSTGRES_SCHEMA}
 # JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
 # Modo da DDL.
 # "hibernate.hbm2ddl.auto".
