--- a/tools-challenge-payment-rs/pom.xml
+++ b/tools-challenge-payment-rs/pom.xml
@@ -50,6 +50,11 @@
             <artifactId>json</artifactId>
             <version>20220320</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 
